Add notes pagination
