# docs/swagger.yaml
@@ -16,6 +16,8 @@ definitions:
         items:
           $ref: '#/definitions/model.Note'
         type: array
+      pagination:
+        $ref: '#/definitions/model.PaginationMeta'
     type: object
   handler.RefreshInput:
     properties:
@@ -59,6 +61,17 @@ definitions:
       updated_at:
         type: string
       user_id:
+        type: integer
+    type: object
+  model.PaginationMeta:
+    properties:
+      limit:
+        type: integer
+      page:
+        type: integer
+      total:
+        type: integer
+      total_pages:
         type: integer
     type: object
   model.RegisterInput:
@@ -234,6 +247,17 @@ paths:
       - auth
   /notes:
     get:
+      parameters:
+      - default: 1
+        description: Номер страницы
+        in: query
+        name: page
+        type: integer
+      - default: 20
+        description: Количество заметок на странице
+        in: query
+        name: limit
+        type: integer
       produces:
       - application/json
       responses:
@@ -241,6 +265,10 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/handler.NotesResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handler.ErrorResponse'
         "401":
           description: Unauthorized
           schema:
